frontend/tests/errors/ER-026/fixed_width_nonpositive/test.vx
&^main() -> #i32 {
  x:#u2.-2;
  0
}
